Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -674,7 +674,8 @@
     "        #return dogs\n",
     "    output = []\n",
     "    for term in list_of_terms:\n",
-    "        constant"
+    "        constant = term[0]\n",
+    "        x_expon"
    ]
   },
   {
