--- a/index.ipynb
+++ b/index.ipynb
@@ -676,7 +676,8 @@
     "    for term in list_of_terms:\n",
     "        constant = term[0]\n",
     "        x_exponent = term[1]\n",
-    "        y_expon"
+    "        y_exponent = term[2]\n",
+    "        term_output"
    ]
   },
   {
