--- a/index.ipynb
+++ b/index.ipynb
@@ -677,7 +677,8 @@
     "        constant = term[0]\n",
     "        x_exponent = term[1]\n",
     "        y_exponent = term[2]\n",
-    "        term_output = constant*x_value**x_exponent*y_value**"
+    "        term_output = constant*x_value**x_exponent*y_value**y_exponent\n",
+    "        output.append"
    ]
   },
   {
