Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -678,7 +678,8 @@
     "        x_exponent = term[1]\n",
     "        y_exponent = term[2]\n",
     "        term_output = constant*x_value**x_exponent*y_value**y_exponent\n",
-    "        output.append(term_output)"
+    "        output.append(term_output)\n",
+    "    return sum"
    ]
   },
   {
