Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -679,21 +679,21 @@
     "        y_exponent = term[2]\n",
     "        term_output = constant*x_value**x_exponent*y_value**y_exponent\n",
     "        output.append(term_output)\n",
-    "    return sum"
+    "    return sum(output)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4"
+       "8"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
