Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -794,7 +794,8 @@
    "outputs": [],
    "source": [
     "def term_df_dx(term):\n",
-    "    pass"
+    "    output = []\n",
+    "    for"
    ]
   },
   {
