Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -795,7 +795,7 @@
    "source": [
     "def term_df_dx(term):\n",
     "    output = []\n",
-    "    for "
+    "    for item in term:"
    ]
   },
   {
