Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -795,7 +795,8 @@
    "source": [
     "def term_df_dx(term):\n",
     "    output = []\n",
-    "    for item in term:"
+    "    for item in term:\n",
+    "        "
    ]
   },
   {
