Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -796,7 +796,7 @@
     "def term_df_dx(term):\n",
     "    output = []\n",
     "    for item in term:\n",
-    "        "
+    "        constan"
    ]
   },
   {
