--- a/index.ipynb
+++ b/index.ipynb
@@ -798,7 +798,8 @@
     "    for item in term:\n",
     "        constant = item[0]\n",
     "        x_exponent = item[1]\n",
-    "        y_exponent "
+    "        y_exponent = item[2]\n",
+    "        "
    ]
   },
   {
