Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -799,7 +799,7 @@
     "        constant = item[0]\n",
     "        x_exponent = item[1]\n",
     "        y_exponent = item[2]\n",
-    "        partial_derivative_x = (constant*x_exponent,"
+    "        partial_derivative_x = (constant*x_exponent,x_exponent - 1, y_ex"
    ]
   },
   {
