Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -792,7 +792,7 @@
    "outputs": [],
    "source": [
     "def term_df_dx(term):\n",
-    "   return (term)"
+    "   return (term[0]*term[1], )"
    ]
   },
   {
