Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -867,7 +867,8 @@
    "outputs": [],
    "source": [
     "def df_dx(list_of_terms):\n",
-    "    out"
+    "    output = []\n",
+    "    for et"
    ]
   },
   {
