Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -870,7 +870,8 @@
     "    output = []\n",
     "    for term in list_of_terms:\n",
     "        constant = term[0]\n",
-    "        x_exponent = "
+    "        x_exponent = term[1]\n",
+    "        y_exponenet"
    ]
   },
   {
