Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -872,7 +872,8 @@
     "        constant = term[0]\n",
     "        x_exponent = term[1]\n",
     "        y_exponent = term[2]\n",
-    "        derivative = (constant * x_exponent, x_exponent)"
+    "        derivative = (constant * x_exponent, x_exponent - 1, y_exponent)\n",
+    "        "
    ]
   },
   {
