Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -873,7 +873,7 @@
     "        x_exponent = term[1]\n",
     "        y_exponent = term[2]\n",
     "        derivative = (constant * x_exponent, x_exponent - 1, y_exponent)\n",
-    "        "
+    "        output.append(deriv)"
    ]
   },
   {
