--- a/index.ipynb
+++ b/index.ipynb
@@ -860,10 +860,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 31,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def df_dx(list_of_terms):\n",
@@ -874,16 +872,25 @@
     "        y_exponent = term[2]\n",
     "        derivative = (constant * x_exponent, x_exponent - 1, y_exponent)\n",
     "        output.append(derivative)\n",
-    "    re"
+    "    return (output)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(8, 1, 1), (3, 0, 0), (0, -1, 1)]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df_dx(four_x_squared_y_plus_three_x_plus_y) # [(8, 1, 1), (3, 0, 0)]"
    ]
