Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -911,7 +911,7 @@
    "outputs": [],
    "source": [
     "def term_df_dy(term):\n",
-    "    return (t)"
+    "    return (term[0]*term[2],)"
    ]
   },
   {
