Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1050,7 +1050,8 @@
    "outputs": [],
    "source": [
     "def df_dy(list_of_terms):\n",
-    "    output = []"
+    "    output = []\n",
+    "    "
    ]
   },
   {
