--- a/index.ipynb
+++ b/index.ipynb
@@ -1051,7 +1051,8 @@
    "source": [
     "def df_dy(list_of_terms):\n",
     "    output = []\n",
-    "    for term in list_of"
+    "    for term in list_of_terms:\n",
+    "        constant = term"
    ]
   },
   {
