--- a/index.ipynb
+++ b/index.ipynb
@@ -1053,7 +1053,8 @@
     "    output = []\n",
     "    for term in list_of_terms:\n",
     "        constant = term[0]\n",
-    "        x_exponent = term[1]"
+    "        x_exponent = term[1]\n",
+    "        y_exponent = term[2]"
    ]
   },
   {
