Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1055,7 +1055,8 @@
     "        constant = term[0]\n",
     "        x_exponent = term[1]\n",
     "        y_exponent = term[2]\n",
-    "        derivative_y = (term[0]*y_exponent, term[1])"
+    "        derivative_y = (term[0]*y_exponent, term[1], term[2]-1)\n",
+    "        "
    ]
   },
   {
