Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1056,7 +1056,7 @@
     "        x_exponent = term[1]\n",
     "        y_exponent = term[2]\n",
     "        derivative_y = (term[0]*y_exponent, term[1], term[2]-1)\n",
-    "        "
+    "        output.append(derivative)"
    ]
   },
   {
