Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1043,10 +1043,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 39,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def df_dy(list_of_terms):\n",
@@ -1057,16 +1055,25 @@
     "        y_exponent = term[2]\n",
     "        derivative_y = (term[0]*y_exponent, term[1], term[2]-1)\n",
     "        output.append(derivative_y)\n",
-    "    return outpu"
+    "    return output"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(4, 2, 0), (0, 1, -1), (1, 0, 0)]"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df_dy(four_x_squared_y_plus_three_x_plus_y) # [(4, 2, 0), (1, 0, 0)]"
    ]
