Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -793,7 +793,8 @@
    "source": [
     "def term_df_dx(term):\n",
     "    #return (term[0]*term[1], term[1]-1, term[2])\n",
-    "    constant = te"
+    "    constant = term[0]\n",
+    "    exponent = term[1]"
    ]
   },
   {
