Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -794,7 +794,8 @@
     "def term_df_dx(term):\n",
     "    #return (term[0]*term[1], term[1]-1, term[2])\n",
     "    constant = term[0]\n",
-    "    exponent = term[1]"
+    "    exponent = term[1]\n",
+    "    return"
    ]
   },
   {
