Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -793,9 +793,9 @@
    "source": [
     "def term_df_dx(term):\n",
     "    #return (term[0]*term[1], term[1]-1, term[2])\n",
-    "    constant = term[0]\n",
-    "    exponent = term[1]\n",
-    "    return"
+    "    constant = term[0]*term[1]\n",
+    "    exponent = term[1]-1\n",
+    "    return "
    ]
   },
   {
