Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -876,7 +876,7 @@
     "        #derivative = (constant * x_exponent, x_exponent - 1, y_exponent)\n",
     "        #output.append(derivative)\n",
     "    #return (output)\n",
-    "    derivative_terms = list(map(lambda function_term: ter))"
+    "    derivative_terms = list(map(lambda function_term: term_df_dx))"
    ]
   },
   {
