Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -863,18 +863,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-46-2df995be8714>, line 11)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-46-2df995be8714>\"\u001b[0;36m, line \u001b[0;32m11\u001b[0m\n\u001b[0;31m    return list(filter(lambda derivative_term: derivative_term[0] > 0, derivative terms))\u001b[0m\n\u001b[0m                                                                                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def df_dx(list_of_terms):\n",
     "    #output = []\n",
@@ -886,21 +877,21 @@
     "        #output.append(derivative)\n",
     "    #return (output)\n",
     "    derivative_terms = list(map(lambda function_term: term_df_dx(function_term), list_of_terms))\n",
-    "    return list(filter(lambda derivative_term: derivative_term[0] > 0, derivative terms))"
+    "    return list(filter(lambda derivative_term: derivative_term[0] > 0, derivative_terms))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(8, 1, 1), (3, 0, 0), (0, -1, 1)]"
+       "[(8, 1, 1), (3, 0, 0)]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
