Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -915,7 +915,8 @@
    "source": [
     "def term_df_dy(term):\n",
     "    #return (term[0]*term[2], term[1], term[2]-1)\n",
-    "    constant = term[0]*term"
+    "    constant = term[0]*term[2]\n",
+    "    exponent = term[2]"
    ]
   },
   {
