Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1031,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -1040,7 +1040,7 @@
        "[(4, 2, 1), (3, 1, 0), (1, 0, 1)]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1056,11 +1056,11 @@
    "outputs": [],
    "source": [
     "def df_dy(list_of_terms):\n",
-    "    output = []\n",
-    "    for term in list_of_terms:\n",
-    "        constant = term[0]\n",
-    "        x_exponent = term[1]\n",
-    "        y_exponent = term[2]\n",
+    "    #output = []\n",
+    "    #for term in list_of_terms:\n",
+    "        #constant = term[0]\n",
+    "        #x_exponent = term[1]\n",
+    "        #y_exponent = term[2]\n",
     "        derivative_y = (term[0]*y_exponent, term[1], term[2]-1)\n",
     "        output.append(derivative_y)\n",
     "    return output"
