Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1064,7 +1064,7 @@
     "        #derivative_y = (term[0]*y_exponent, term[1], term[2]-1)\n",
     "        #output.append(derivative_y)\n",
     "    #return output\n",
-    "    derivative_terms_y = list(map(lambda derivative_term_y: term_df_dy(derivativ)))"
+    "    derivative_terms_y = list(map(lambda derivative_term_y: term_df_dy(derivative_terms_y)))"
    ]
   },
   {
