--- a/index.ipynb
+++ b/index.ipynb
@@ -1065,7 +1065,7 @@
     "        #output.append(derivative_y)\n",
     "    #return output\n",
     "    derivative_terms_y = list(map(lambda function_term_y: term_df_dy(function_term_y), list_of_terms))\n",
-    "    return list(filter(lambda derivative_term_y: deriva))"
+    "    return list(filter(lambda derivative_term_y: derivative_term_y[0]>))"
    ]
   },
   {
