Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1051,7 +1051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1065,21 +1065,21 @@
     "        #output.append(derivative_y)\n",
     "    #return output\n",
     "    derivative_terms_y = list(map(lambda function_term_y: term_df_dy(function_term_y), list_of_terms))\n",
-    "    return list(filter(lambda derivative_term_y: derivative_term_y[0] > 0, derivative_terms))"
+    "    return list(filter(lambda derivative_term_y: derivative_term_y[0] > 0, derivative_terms_y))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(4, 2, 0), (0, 1, -1), (1, 0, 0)]"
+       "[(4, 2, 0), (1, 0, 0)]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1090,16 +1090,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(2, 3, 0), (3, 1, 0), (0, 1, -1)]"
+       "[(2, 3, 0), (3, 1, 0)]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
